--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-Flask==0.10.1
-pymongo==3.0.3
+Flask==0.12.2
+pymongo==3.4.0
 beautifulsoup4==4.4.1
-requests==2.8.0
-passlib==1.6.5
+uuid==1.30
+passlib==1.7.1
+regex==2017.6.23
+requests==2.9.1
+uwsgi
